--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
   
   	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<gsVersion>(,9.1.0]</gsVersion>
 	</properties>
 
 	<distributionManagement>
@@ -66,21 +67,25 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.10</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
+			<scope>test</scope>
 		</dependency>
         <dependency>
 			<groupId>com.gigaspaces</groupId>
 			<artifactId>gs-openspaces</artifactId>
-			<version>(,9.1.0]</version>
+			<version>${gsVersion}</version>
+			<scope>test</scope>
 		</dependency>
            <dependency>
 			<groupId>com.gigaspaces</groupId>
 			<artifactId>gs-runtime</artifactId>
-			<version>(,9.1.0]</version>
+			<version>${gsVersion}</version>
+			<scope>test</scope>
 		</dependency>
   </dependencies>
 </project>
