--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>ClassBasedEviction</groupId>
-  <artifactId>ClassBasedEviction</artifactId>
+  <groupId>org.openspaces</groupId>
+  <artifactId>PrioritizedEvictionStrategy</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>ClassBasedEviction</name>
   <description>This project demonstrates the use of a custom eviction stategy, the eviction here is based on the objects' classes</description>
   
   	<properties>
@@ -11,34 +10,16 @@
 		<gsVersion>(,9.1.0]</gsVersion>
 	</properties>
 
-	<distributionManagement>
+	<repositories>
 		<repository>
-			<id>GigaSpaces Repository</id>
-			<name>GigaSpaces Repository-releases</name>
-			<url>http://mvn-srv:8081/artifactory/libs-release-local</url>
+			<id>openspaces</id>
+			<url>http://maven-repository.openspaces.org</url>
 		</repository>
-	</distributionManagement>
+	</repositories>  
   
   <build>
-    <sourceDirectory>src</sourceDirectory>
-    <resources>
-      <resource>
-        <directory>src</directory>
-        <excludes>
-          <exclude>**/*.java</exclude>
-        </excludes>
-      </resource>
-    </resources>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.3.2</version>
-        <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
-        </configuration>
-      </plugin>
-      <plugin>
+      <plugins>
+		<plugin>
 		<artifactId>maven-assembly-plugin</artifactId>
 		<configuration>
 		<appendAssemblyId>false</appendAssemblyId>
@@ -67,25 +48,25 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.10</version>
-			<scope>test</scope>
+			<!-- <scope>test</scope> -->
 		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
-			<scope>test</scope>
+			<!-- <scope>test</scope> -->
 		</dependency>
         <dependency>
 			<groupId>com.gigaspaces</groupId>
 			<artifactId>gs-openspaces</artifactId>
 			<version>${gsVersion}</version>
-			<scope>test</scope>
+			<!-- <scope>test</scope> -->
 		</dependency>
            <dependency>
 			<groupId>com.gigaspaces</groupId>
 			<artifactId>gs-runtime</artifactId>
 			<version>${gsVersion}</version>
-			<scope>test</scope>
+			<!-- <scope>test</scope> -->
 		</dependency>
   </dependencies>
 </project>
