--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.10</version>
-			<!-- <scope>test</scope> -->
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
@@ -56,17 +56,17 @@
 			<version>1.2.17</version>
 			<!-- <scope>test</scope> -->
 		</dependency>
-        <dependency>
+       <!--  <dependency>
 			<groupId>com.gigaspaces</groupId>
 			<artifactId>gs-openspaces</artifactId>
 			<version>${gsVersion}</version>
-			<!-- <scope>test</scope> -->
+			<scope>test</scope>
 		</dependency>
            <dependency>
 			<groupId>com.gigaspaces</groupId>
 			<artifactId>gs-runtime</artifactId>
 			<version>${gsVersion}</version>
-			<!-- <scope>test</scope> -->
-		</dependency>
+			<scope>test</scope> 
+		</dependency>-->
   </dependencies>
 </project>
