--- a/pom.xml
+++ b/pom.xml
@@ -17,32 +17,6 @@
 		</repository>
 	</repositories>  
   
-  <build>
-      <plugins>
-		<plugin>
-		<artifactId>maven-assembly-plugin</artifactId>
-		<configuration>
-		<appendAssemblyId>false</appendAssemblyId>
-		<archive>
-			<manifest>
-				<mainClass>org.openspaces.pu.container.integrated.IntegratedProcessingUnitContainer</mainClass>
-			</manifest>
-		</archive>
-		<descriptorRefs>
-			<descriptorRef>jar-with-dependencies</descriptorRef>
-		</descriptorRefs>
-		</configuration>
-		<executions>
-			<execution>
-				<phase>package</phase>
-				<goals>
-					<goal>assembly</goal>
-				</goals>
-			</execution>
-		</executions>
-	</plugin>
-   </plugins>
-  </build>
   <dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -54,19 +28,26 @@
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
-			<!-- <scope>test</scope> -->
+			<scope>test</scope>
 		</dependency>
-       <!--  <dependency>
+        <dependency>
 			<groupId>com.gigaspaces</groupId>
 			<artifactId>gs-openspaces</artifactId>
 			<version>${gsVersion}</version>
-			<scope>test</scope>
+			<scope>provided</scope>
 		</dependency>
            <dependency>
 			<groupId>com.gigaspaces</groupId>
 			<artifactId>gs-runtime</artifactId>
 			<version>${gsVersion}</version>
-			<scope>test</scope> 
-		</dependency>-->
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>3.1.2.RELEASE</version>
+			<scope>test</scope>
+		</dependency>
+            
   </dependencies>
 </project>
