--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   
   	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<gsVersion>9.1.0-m3-7491-274</gsVersion>
+		<gsVersion>9.1.0-m2</gsVersion>
 	</properties>
 
 	<repositories>
