--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
-			<!-- <scope>test</scope> -->
+			<scope>test</scope>
 		</dependency>
   </dependencies>
 </project>
