--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: java
 jdk:
   - oraclejdk7
 
-script: "echo "\"echo \"do not run test classes back to back since the set up doesn't supprot it\"" > c1.sh && chmod +x c1.sh && ./c1.sh\""
+script: "echo \"\"echo \"do not run test classes back to back since the set up doesn't supprot it\"\" > c1.sh && chmod +x c1.sh && ./c1.sh\""
