--- a/pom.xml
+++ b/pom.xml
@@ -50,4 +50,15 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	<plugins>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-compiler-plugin</artifactId>
+			<configuration>
+				<source>1.6</source>
+				<target>1.6</target>
+			</configuration>
+			<version>2.3.2</version>
+		</plugin>
+	</plugins>
 </project>
