--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
 	<groupId>org.openspaces</groupId>
 	<artifactId>PrioritizedEvictionStrategy</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<description>This project demonstrates the use of a custom eviction stategy, the eviction here is based on the objects' classes</description>
+	<description>This project demonstrates the use of a custom eviction strategy, the eviction here is based on the objects' classes</description>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<gsVersion>9.1.0-m4-7493-107</gsVersion>
+		<gsVersion>9.1.0-m4</gsVersion>
 	</properties>
 
 	<repositories>
