made init log info level and fixed threads intrrupt problem

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 	</repositories>
 
 	<dependencies>
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.gigaspaces</groupId>
 			<artifactId>gs-openspaces</artifactId>
 			<version>${gsVersion}</version>
@@ -31,7 +31,7 @@
 			<artifactId>gs-runtime</artifactId>
 			<version>${gsVersion}</version>
 			<scope>provided</scope>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
