--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<gsVersion>9.1.0-m4</gsVersion>
+		<gsVersion>9.1.0-rc</gsVersion>
 	</properties>
 
 	<repositories>
