added dbcp to classpath

--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,12 @@
 			<version>5.1.21</version>
 			<scope>test</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>commons-dbcp</groupId>
+			<artifactId>commons-dbcp</artifactId>
+			<version>1.4</version>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
