--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 			<version>${gsVersion}</version>
 			<scope>provided</scope>
 		</dependency>
-		<!--These Dependencies are needed only for the DB test-->
+		<!--These Dependencies are needed only for the tests-->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -52,6 +52,7 @@
 			<version>${springVersion}</version>
 			<scope>test</scope>
 		</dependency>
+		<!--These Dependencies are needed only for theDB  test-->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
